[package]
name          = "proptest-quickcheck-interop"
version       = "1.0.0"
authors       = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
license       = "MIT/Apache-2.0"
readme        = "README.md"

repository    = "https://github.com/Centril/proptest-quickcheck-interop"
documentation = "https://docs.rs/proptest-quickcheck-interop"

keywords      = ["property", "testing", "quickcheck", "hypothesis"]
categories    = ["development-tools::testing"]

description = """
Provides an interoperability layer for reuse of quickcheck::Arbitrary impls in proptest
"""

[dependencies]
rand       = "0.3.18"
proptest   = "0.3.2"
quickcheck = "0.5.0"